# Asimu

./: .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.cursor/: mcp.json.example
.cursor/rules/: asimu.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: default.toml
crates/asimu-mesh-reorder/: Cargo.toml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CASE_FORMAT.md  DATA_MODEL.md  DEBUG_CHECKLIST.md  MCP.md  OBSERVABILITY.md  README.md  SLIDING_MESH.md  TODO.md
docs/adr/: 0001-rust-cfd-foundation.md  0002-layered-cfd-architecture.md  0003-multi-precision-and-gpu.md  0004-mcp-integration.md  0005-time-integration.md  0006-ffi-interop.md  0007-vts-binary-io.md  0008-cgns-io.md  0009-compressible-navier-stokes.md  0010-unstructured-mixed-mesh.md  0011-parallel-fvm-face-coloring.md  0012-unstructured-gradient-limiters.md  0013-exec-parallel-scatter-execution-context.md  0014-turbulence-k-omega-sst-rans.md  0015-incompressible-navier-stokes-simplec-piso.md  0016-runtime-compute-precision.md  0017-gpu-cuda-cudarc-multi-backend.md  0018-unstructured-compute-backend.md  0019-structured-compute-backend.md
docs/en/: ARCHITECTURE.md  CROSS_CUTTING.md  README.md
docs/tasks/: structured-f32-s0-s1.md
docs/theory/: README.md  boundary_conditions.md  curvilinear_metrics.md  dual_time_stepping.md  fvm_diffusion.md  heat_conduction_fvm.md  incompressible_simplec_piso.md  interface_reconstruction.md  inviscid_flux.md  linear_gmres.md  low_mach_ab_hex_vortex.md  low_mach_cutoff_sweep_hex_vortex.md  low_mach_p2_hex_vortex.md  low_mach_preconditioning.md  nondimensional.md  structured_gradients.md  time_integration.md  turbulence_k_omega_sst.md  unstructured_fvm.md
examples/: cgns_to_vts.rs  mesh_probe.rs  probe_vts.rs  sod_benchmark_export.rs
kernels/cuda/: boundary_bc_f32.cu  dual_time_storage_f32.cu  field_f32.cu  idwls_viscous_rhs_f32.cu  inviscid_first_order_f32.cu  lusgs_diagonal_f32.cu  lusgs_sweep_unstructured_f32.cu  spectral_radius_unstructured_f32.cu  viscous_interior_f32.cu
scripts/: commit_msg_check.py  complexity_check.py  fetch_pyvista_structured_grid_vts.sh  gen_vts_fixtures.py  plot_residual.py  plot_sod_benchmark.py  preview_theory_md.sh  requirements.txt  test_complexity_check.py
src/: config.rs  error.rs  lib.rs  main.rs  mesh_order.rs
tests/: boundary_1d_diffusion.rs  case_chrome_trace.rs  case_run.rs  cli_smoke.rs  compressible_bc.rs  dual_time_inner_regression.rs  incompressible_coupling.rs  incompressible_curvilinear_lid.rs  initial_conditions.rs  io_integration.rs  sod_benchmark.rs  vts_io.rs
(+476 files in other folders)
