[package]
name = "asimu"
version = "0.1.0"
edition = "2024"
description = "面向工程与研究场景的 Rust 计算流体力学（CFD）求解器"
license = "Apache-2.0 OR MIT"
readme = "README.md"
rust-version = "1.85"
keywords = ["cfd", "simulation", "fluid-dynamics"]
categories = ["science", "simulation"]

build = "build.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
quick-xml = { version = "0.37", optional = true }
base64 = { version = "0.22", optional = true }
flate2 = { version = "1", optional = true }
rayon = { version = "1", optional = true }
wide = { version = "0.7", optional = true, default-features = false }

[features]
default = ["parallel-fvm"]
io-vtk = ["dep:quick-xml", "dep:base64", "dep:flate2"]
io-cgns = []
io-cgns-vts = ["io-cgns", "io-vtk"]
# 非结构 FVM 内面着色桶并行（rayon；桶内 compute 并行 + scatter 串行）。
parallel-fvm = ["dep:rayon"]
# 非结构 FVM 热算子 SIMD（`wide` f64x4；标量回退始终可用）。
simd-fvm = ["dep:wide"]
# 圆柱 CGNS 多步时间推进、端到端算例、DLR 全 zone 导出等（读 case_cylinder/cylinder.cgns）。
# 默认关闭；本地/CI 长跑：cargo test --features io-cgns,slow-tests
slow-tests = []

[build-dependencies]
cc = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "mesh_check"
path = "src/bin/mesh_check.rs"
required-features = ["io-cgns-vts"]

[[example]]
name = "cgns_to_vts"
required-features = ["io-cgns-vts"]

[[example]]
name = "probe_vts"
required-features = ["io-vtk"]

[[example]]
name = "mesh_probe"
required-features = ["io-cgns-vts"]

[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
